# github-ci

./: .gitignore  .pre-commit-config.yaml  .releaserc  README.md  pyproject.toml
.github/: sr-prepare.sh  sr-release.sh
.github/workflows/: main.yml
jobsim/: __init__.py  department.py  employee.py  example.py  location.py  trainings_scheduler.py
jobsim/departments/: finance.yaml  hr.yaml  it.yaml
jobsim/locations/: dubai.yaml  krakow.yaml  montreal.yaml  munich.yaml  paris.yaml  san_francisco.yaml  sydney.yaml
tests/large/: conftest.py  test_large.py
tests/small/: conftest.py  test_employee.py
